--- a/index.html
+++ b/index.html
@@ -5,38 +5,215 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" media="screen" href="assets\css\style.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Hangman</title>
 </head>
 
 <body>
+    <div class="container">
+        <div class="page-header">
+            <h1>HANGMAN</h1>
+        </div>
+        <div class="panel-body">
+            <h2>African American Actors and Actresses</h2>
+        </div>
 
-    <h1>Hangman Game</h1>
-    <h2>Famous African American Actors</h2>
-    <br>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Hint</h3>
+                        </div>
+                        <div class="panel-body" id="clue">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Incorrect Guesses</h3>
+                        </div>
+                        <div class="panel-body" id="wrong">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">The Gallows</h3>
+                    </div>
+                    <div class="panel-body">
+                        <canvas id="stickman">This Text will show if the Browser does NOT support HTML5 Canvas tag</canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <div class="inln">
-        <div id="msg1">The word is:</div>
-        <div id="keyin"></div>
+        <div class="row" id="corrans">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h2 class="panel-title">And the name is.....</h2>
+                </div>
+                <div class="panel-body" id="keyin">
+                </div>
+            </div>
+        </div>
+
+        <div class="row" id="msgbox">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h2 class="panel-title">Game Messages</h2>
+                </div>
+                <div class="panel-body" id="messages">
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row" id="themovie">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h2 class="panel-title">See the performance!!</h2>
+                </div>
+                <div class="panel-body">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" id="mediaview" src=""></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
-    <br>
-    <div class="inln">
-        <div id="msg2">Incorrect Guesses:</div>
-        <div id="wrong"></div>
-    </div>
-
 </body>
 
 <script>
+    // Initialize global variables.
     //    <!-- select word -->   
-    var word = "camal";
-    console.log(word);
-    console.log(word.length);
+    var word = "";
+    var hint = "";
+    var vidlink = "";
+    var nonlttr = 0; //keeps track of non-letter characters
 
     // Initialize right and wrong guess count
     var rightguess = 0;
     var wrongguess = 0;
+    var lives = 10;
+    var random;
+
+    var actlist = [
+        ["eddie murphy", "Multi-talented, appeared on SNL, born 1961", "assets/movies/eddie.mp4"],
+        ["morgan freeman", "Actor, producer & narrator, Oscar for Million Dollar Baby, born in 1937", "assets/movies/morgan.mp4"],
+        ["chadwick boseman", "Actor, played Jackie Robinson and James Brown, born in 1976", "assets/movies/chadwick.mp4"],
+        ["oshea jackson", "Actor, rapper, might be in your freezer, born 1969", "assets/movies/oshea.mp4"],
+        ["will smith", "Actor, rapper, from West Philadelphia, born 1968", "assets/movies/will.mp4"],
+        ["halle berry", "Actress, Oscar for Monster's Ball, born in 1966", "assets/movies/halle.mp4"],
+        ["viola davis", "Actress, won Triple Crown of Acting, born in 1965", "assets/movies/viola.mp4"],
+        ["oprah winfrey", "Multi-talented, has a book club, born in 1954", "assets/movies/oprah.mp4"],
+        ["dana owens", "Multi-talented, a queen, born in 1970", "assets/movies/dana.mp4"],
+        ["octavia spencer", "Actress, Oscar winner, pie maker, born in 1972", "assets/movies/octavia.mp4"]
+    ];
+
+    var dfltvideo = 'assets/images/snowtv.gif';
+    var movie = document.getElementById('mediaview');
+    movie.setAttribute("src", dfltvideo);
+
+
+    // -------------------------------------------------------------
+    // Draw The Hangman
+    // -------------------------------------------------------------
+
+    // Animate man
+    var animate = function () {
+        var drawMe = lives;
+        drawArray[drawMe]();
+    }
+
+    // Hangman
+    canvas = function () {
+
+        myStickman = document.getElementById("stickman");
+        context = myStickman.getContext('2d');
+        context.beginPath();
+        context.strokeStyle = "#fff";
+        context.lineWidth = 2;
+    };
+
+    head = function () {
+        myStickman = document.getElementById("stickman");
+        context = myStickman.getContext('2d');
+        context.beginPath();
+        context.arc(60, 25, 10, 0, Math.PI * 2, true);
+        context.stroke();
+    }
+
+    draw = function (pathFromx, pathFromy, pathTox, pathToy) {
+        myStickman = document.getElementById("stickman");
+        context = myStickman.getContext('2d');
+        context.beginPath();
+        context.moveTo(pathFromx, pathFromy);
+        context.lineTo(pathTox, pathToy);
+        context.stroke();
+    }
+
+    frame1 = function () {
+        draw(0, 150, 150, 150);
+    };
+
+    frame2 = function () {
+        draw(10, 0, 10, 600);
+    };
+
+    frame3 = function () {
+        draw(0, 5, 70, 5);
+    };
+
+    frame4 = function () {
+        draw(60, 5, 60, 15);
+    };
+
+    torso = function () {
+        draw(60, 36, 60, 70);
+    };
+
+    rightArm = function () {
+        draw(60, 46, 100, 50);
+    };
+
+    leftArm = function () {
+        draw(60, 46, 20, 50);
+    };
+
+    rightLeg = function () {
+        draw(60, 70, 100, 100);
+    };
+
+    leftLeg = function () {
+        draw(60, 70, 20, 100);
+    };
+
+    drawArray = [rightLeg, leftLeg, rightArm, leftArm, torso, head, frame4, frame3, frame2, frame1];
+
+
+    // ----------------------------------------------------------------
+    // End Of Drawing
+    // ----------------------------------------------------------------
+
+    // Randomly select the name that will be solved.
+
+    var random = Math.floor(Math.random() * 10);
+    word = actlist[random][0];
+    hint = actlist[random][1];
+    vidlink = actlist[random][2];
+
+    // Show the hint
+    document.getElementById("clue").innerText = hint;
+
 
     // <!-- show blanks for letters in the word -->
 
@@ -50,6 +227,10 @@
 
         var ltrpos = document.createElement("li");
         var somstri = "_";
+        if (word.charAt(i) === " ") {
+            somstri = '\xa0';
+            nonlttr++;
+        }
         ltrpos.innerText = somstri;
         guessspace.appendChild(ltrpos);
 
@@ -69,6 +250,8 @@
 
     var alreadyguessed = [];
 
+    //Get the keyboard input guess, validate it and determine if it is in the name
+
     document.onkeyup = function (event) {
         var userInput = event.key.toLowerCase();
         var found = false;
@@ -78,11 +261,15 @@
         if (userInput.match("^[a-zA-Z]+$")) {
             // Check if letter was already guessed.
             if (alreadyguessed.indexOf(userInput) >= 0) {
-                alert("This letter was already guessed.  Guess again.")
+                mes = document.getElementById("messages");
+                mes.innerText = "This letter was already guessed. Guess again.";
             }
             else {
                 // Add guessed letter to list of letters already guessed.
                 alreadyguessed.push(userInput);
+
+                mes = document.getElementById("messages");
+                mes.innerText = "";
 
                 // Check through the word for the letter.
                 for (i = 0; i < word.length; i++) {
@@ -91,8 +278,13 @@
                         found = true;
                         replaceltr(i, userInput);
                         rightguess++;
-                        if (rightguess === word.length) {
-                            alert("WINNER!!!");
+                        // If all letters have been guessed, declare winner.
+                        if (rightguess === (word.length - nonlttr)) {
+                            mes = document.getElementById("messages");
+                            mes.innerText = "WINNER!!!!";
+                            var dfltvideo = vidlink;
+                            var movie = document.getElementById('mediaview');
+                            movie.setAttribute("src", dfltvideo);
                         }
                     }
                 }
@@ -102,20 +294,22 @@
                     incguess.innerText = userInput;
                     wrnglttrspace.appendChild(incguess);
                     wrongguess++;
+                    lives--;
+                    animate();
+                    // If there have been 10 incorrect guesses, declare loser.
                     if (wrongguess >= 10) {
-                        alert("LOSER!!");
+                        mes = document.getElementById("messages");
+                        mes.innerText = "You lost. LOSER!!!";
                     }
                 }
             }
         }
         else {
-            alert("You must guess a letter from a-z.")
+            mes = document.getElementById("messages");
+            mes.innerText = "You must guess a letter from a-z";
         }
 
     }
-
-
-
 
 </script>
 
