--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="hmcontainer">
         <canvas id="stickman">This Text will show if the Browser does NOT support HTML5 Canvas tag</canvas>
     </div>
 </body>
